--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -10,10 +10,31 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- script: echo Hello, world! Nice to meet you!!
-  displayName: 'Run a one-line script'
+- task: AzureKeyVault@2
+  displayName: Get Secrets from Key Vault
+  inputs:
+    azureSubscription: 'spn-keyvault-devops'
+    KeyVaultName: 'databricks-marv'
+    SecretsFilter: '*' # 'DatabasePassword'
+    RunAsPreJob: false
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- task: CmdLine@2
+  displayName: Write Secret into File
+  inputs:
+    script: |
+      echo $(DatabasePassword)
+      echo $(DatabasePassword) > secret.txt
+      cat secret.txt
+
+- task: CopyFiles@2
+  displayName: Copy Secrets File
+  inputs:
+    Contents: secret.txt
+    targetFolder: '$(Build.ArtifactStagingDirectory)'
+
+- task: PublishBuildArtifacts@1
+  displayName: Publish Secrets File
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
