--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -13,9 +13,9 @@ steps:
 - task: AzureKeyVault@2
   displayName: Get Secrets from Key Vault
   inputs:
-    azureSubscription: 'spn-keyvault-devops'
+    azureSubscription: 'KVTest'
     KeyVaultName: 'databricks-marv'
-    SecretsFilter: '*' # 'DatabasePassword'
+    SecretsFilter: '*'
     RunAsPreJob: false
 
 - task: CmdLine@2
