Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -15,7 +15,7 @@ steps:
   inputs:
     azureSubscription: 'KVTest'
     KeyVaultName: 'Disk-Encryption-vault'
-    SecretsFilter: '*'
+    SecretsFilter: '*' # 'DatabasePassword'
     RunAsPreJob: false
 
 - task: CmdLine@2
