--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,10 +8,11 @@ steps:
 
 
 - task: AzureKeyVault@2
+displayName: Get secrets from KeyVault
   inputs:
     azureSubscription: 'KVTest'
     KeyVaultName: 'new-test-marv'
-    SecretsFilter: '*' # 'DatabasePassword'
+    SecretsFilter: 'Vm-spoke-01' # 'DatabasePassword'
     RunAsPreJob: false
     
 - task: CmdLine@2
