--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,32 +5,23 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-
-
 - task: AzureKeyVault@2
-  displayName: Get secrets from KeyVault
   inputs:
-    azureSubscription: 'KVTest'
+    azureSubscription: 'Your-Azure-Subscription'
     KeyVaultName: 'new-test-marv'
-    SecretsFilter: 'Vm-spoke-01' # 'DatabasePassword'
+    SecretsFilter: '*'
     RunAsPreJob: false
-    
+
 - task: CmdLine@2
-  displayName: Write Secret into File
   inputs:
-    script: |
-      echo $(DatabasePassword)
-      echo $(DatabasePassword) > secret.txt
-      cat secret.txt
+    script: 'echo $(Your-Secret-Name) > secret.txt'
 
 - task: CopyFiles@2
-  displayName: Copy Secrets File
   inputs:
     Contents: secret.txt
     targetFolder: '$(Build.ArtifactStagingDirectory)'
 
 - task: PublishBuildArtifacts@1
-  displayName: Publish Secrets File
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'drop'
