Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,13 +10,13 @@ steps:
   inputs:
     azureSubscription: 'KVTest'
     KeyVaultName: 'new-test-marv'
-    SecretsFilter: '*' $ 'Your-Secret-Name'
+    SecretsFilter: 'Vm-spoke-01'
     RunAsPreJob: false
 
 - task: CmdLine@2
   displayName: Copy the secrets to a file
   inputs:
-    script: 'echo $(Your-Secret-Name) > secret.txt'
+    script: 'echo $(Vm-spoke-01) > secret.txt'
 
 - task: CopyFiles@2
   inputs:
