--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,7 @@ steps:
     script: 'echo $(Vm-spoke-01) > secret.txt'
 
 - task: CopyFiles@2
+  displayName: create the folder
   inputs:
     Contents: secret.txt
     targetFolder: '$(Build.ArtifactStagingDirectory)'
