--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,13 +10,13 @@ steps:
   inputs:
     azureSubscription: 'KVTest'
     KeyVaultName: 'new-test-marv'
-    SecretsFilter: '*'
+    SecretsFilter: '*' $ 'your-secret'
     RunAsPreJob: false
 
 - task: CmdLine@2
   displayName: Copy the secrets to a file
   inputs:
-    script: 'echo $(Vm-spoke-01) > secret.txt'
+    script: 'echo $(your-secret) > secret.txt'
 
 - task: CopyFiles@2
   displayName: create the folder
