Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ pool:
 
     - task: CmdLine@2
   inputs:
-    script: 'echo $(Your-Secret-Name) > secret.txt'
+    script: 'echo $(Vm-spoke-01) > secret.txt'
 
 - task: CopyFiles@2
   inputs:
